2005-08-24  Ryan Lortie  <desrt@desrt.ca>

	* modem-applet.c: Conditionalise #inclusion of <pty.h>.  Add the
	  FreeBSD equivilents inside an #ifdef __FreeBSD__.  Patch from
	  Diego Pettenò <flameeyes@gentoo.org> closes bug #314366.

2005-07-03  Kjartan Maraas  <kmaraas@gnome.org>

	* modem-applet.c: (on_modem_applet_about_clicked): Fix naming
	in the about dialog. Patch from <Lex.Hider@gmail.com>. Closes bug
	#302873.

2005-02-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* modem-applet.c: s/translator_credits/translator-credits/, fixes
	#300959

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* modem-applet.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* modem-applet.c: Mark a function as static.

2005-01-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* modem-applet.c, modemlights.glade: fixed all the known issues left, 
	turn it all asynchronous without breaking badly, fixed some leaks, 
	detect su at configure time, free things properly and mark the OK 
	button as default when putting password.

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am: No need to define VERSION or ICONDIR as they are
	  defined for the entire applet.

2005-01-07  Davyd Madeley  <davyd@madeley.id.au>

	New modemlights applet from Carlos Garnacho <carlosg@gnome.org>.
	All Changelog entries from now on refer to the new applet.

2004-09-23  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_ModemLightsApplet.server.in.in: add a better description.
	Bug #152040.

2004-09-12  Shaun McCance  <shaunm@gnome.org>

	* docs/C/modemlights-C.omf:
	* docs/C/modemlights.xml:
	- Updates for 2.8

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Removed references to screen-exec.
	* modemlights.c: Fix include for gnome_help_*

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* modemlights.c: (is_Modem_on), (get_ISDN_connect_time),