@@ -1,3 +1,8 @@
+2006-01-08  Sebastien Bacher  <seb128@debian.org>
+
+	* modem-applet.c: (shutdown_backend): stop updating the tooltip
+	when the applet is removed, fix a crasher (Closes: #326189)
+
 2005-08-24  Ryan Lortie  <desrt@desrt.ca>
 
 	* modem-applet.c: Conditionalise #inclusion of <pty.h>.  Add the
